deploy: 268ce49256507c2171ff988a8e53256502ec0cca

--- a/python/namespace.html
+++ b/python/namespace.html
@@ -217,7 +217,7 @@
 </style>
 <div class="sidebar" id="variable-scope">
 <p class="sidebar-title">Variable scope</p>
-<a class="reference internal image-reference" href="python/../images/namespace.png"><img alt="python/../images/namespace.png" src="python/../images/namespace.png" /></a>
+<a class="reference internal image-reference" href="images/namespace.png"><img alt="images/namespace.png" src="images/namespace.png" /></a>
 <ol class="arabic simple">
 <li><p>Global Namespace: is at the current module level name space</p></li>
 <li><p>Local Namespace: is in the <cite>pointless_display</cite> name space level</p></li>
