--- a/seqcomp/information.html
+++ b/seqcomp/information.html
@@ -259,9 +259,9 @@
 <col style="width: 50%" />
 </colgroup>
 <tbody>
-<tr class="row-odd"><td><a class="reference internal image-reference" href="seqcomp/../images/CtoT_MI.png"><img alt="seqcomp/../images/CtoT_MI.png" src="seqcomp/../images/CtoT_MI.png" /></a>
+<tr class="row-odd"><td><a class="reference internal image-reference" href="images/CtoT_MI.png"><img alt="images/CtoT_MI.png" src="images/CtoT_MI.png" /></a>
 </td>
-<td><a class="reference internal image-reference" href="seqcomp/../images/CtoT_RE.png"><img alt="seqcomp/../images/CtoT_RE.png" src="seqcomp/../images/CtoT_RE.png" /></a>
+<td><a class="reference internal image-reference" href="images/CtoT_RE.png"><img alt="images/CtoT_RE.png" src="images/CtoT_RE.png" /></a>
 </td>
 </tr>
 </tbody>
