deploy: 3547c0fe7c8a0686e2371296081cdce9c53b0d66

--- a/python/namespace.html
+++ b/python/namespace.html
@@ -217,7 +217,7 @@
 </style>
 <div class="sidebar" id="variable-scope">
 <p class="sidebar-title">Variable scope</p>
-<a class="reference internal image-reference" href="images/namespace.png"><img alt="images/namespace.png" src="images/namespace.png" /></a>
+<a class="reference internal image-reference" href="../_images/namespace.png"><img alt="../_images/namespace.png" src="../_images/namespace.png" style="width: 235.20000000000002px; height: 174.4px;" /></a>
 <ol class="arabic simple">
 <li><p>Global Namespace: is at the current module level name space</p></li>
 <li><p>Local Namespace: is in the <cite>pointless_display</cite> name space level</p></li>
