deploy: 96f66ec0755b98c05a24a9cf24ef32a1ac23a076

--- a/intro.html
+++ b/intro.html
@@ -199,7 +199,7 @@
 <p>At this stage, I’m sure you have many questions. Like, <em>What is “bioinformatics”?</em> <em>I’ve heard the phrase “Data Science”, is that what bioinformatics is?</em> <em>Why are you teaching Python for part of the course and R for the rest?</em></p>
 <p>Let’s go backwards. We teach Python and R because these are the languages that we use in our own research. We use these languages because they have capabilities that allow us to leverage very sophisticated capabilities for our science. It also turns out that these two languages are the dominant languages employed in Data Science.</p>
 <div class="sidebar">
-<p class="sidebar-title">What’s the difference between Python and R?</p>
+<p class="sidebar-title">What’s the difference between using Python versus using R?</p>
 <p>The major difference between Python and R comes in how they are typically used. Many of the concepts you will learn in the Python topic – conditionals, iteration, functions – are not directly coded by most users of R. They are implicitly being used, but are “hidden” from users.</p>
 <p>The way you will learn Python is as a more “conventional” programming approach.</p>
 </div>
