--- a/genindex.html
+++ b/genindex.html
@@ -354,6 +354,16 @@
         <li><a href="python/files.html#index-1">files</a>
 </li>
       </ul></li>
+      <li><a href="python/lists.html#index-0">collection objects</a>
+
+      <ul>
+        <li><a href="python/types.html#index-7">dict types</a>
+</li>
+        <li><a href="python/types.html#index-5">list types</a>
+</li>
+        <li><a href="python/types.html#index-6">tuple types</a>
+</li>
+      </ul></li>
       <li>
     comment
 
@@ -370,6 +380,8 @@
         <li><a href="python/logic.html#index-7">comment</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     comprehension
 
@@ -379,8 +391,6 @@
         <li><a href="python/misc.html#index-1">list</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     concatenating
 
@@ -401,8 +411,6 @@
         <li><a href="python/numpy.html#index-8">numpy</a>
 </li>
       </ul></li>
-      <li><a href="python/lists.html#index-0">container objects</a>
-</li>
       <li><a href="python/misc.html#index-0">correctness</a>
 </li>
       <li>
@@ -426,7 +434,7 @@
       <ul>
         <li><a href="python/misc.html#index-1">comprehension</a>
 </li>
-        <li><a href="python/types.html#index-7">types</a>
+        <li><a href="python/types.html#index-7">types collection objects</a>
 </li>
       </ul></li>
   </ul></td>
@@ -663,7 +671,7 @@
       <ul>
         <li><a href="python/misc.html#index-1">comprehension</a>
 </li>
-        <li><a href="python/types.html#index-5">types</a>
+        <li><a href="python/types.html#index-5">types collection objects</a>
 </li>
       </ul></li>
       <li>
@@ -1027,7 +1035,7 @@
     tuple
 
       <ul>
-        <li><a href="python/types.html#index-6">types</a>
+        <li><a href="python/types.html#index-6">types collection objects</a>
 </li>
       </ul></li>
       <li>
@@ -1052,19 +1060,19 @@
       <ul>
         <li><a href="python/types.html#index-3">bool</a>
 </li>
-        <li><a href="python/types.html#index-7">dict</a>
+        <li><a href="python/types.html#index-7">collection objects, dict</a>
+</li>
+        <li><a href="python/types.html#index-5">collection objects, list</a>
+</li>
+        <li><a href="python/types.html#index-6">collection objects, tuple</a>
 </li>
         <li><a href="python/types.html#index-2">float</a>
 </li>
         <li><a href="python/types.html#index-1">int</a>
 </li>
-        <li><a href="python/types.html#index-5">list</a>
-</li>
         <li><a href="python/types.html#index-4">None</a>
 </li>
         <li><a href="python/types.html#index-3">True / False</a>
-</li>
-        <li><a href="python/types.html#index-6">tuple</a>
 </li>
         <li><a href="python/types.html#index-9">type casting</a>
 </li>
