--- a/notation.html
+++ b/notation.html
@@ -211,6 +211,12 @@
 <tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">a_function()</span></code></p></td>
 <td><p>Really just a different type of variable, but the parentheses indicate it’s a function.</p></td>
 </tr>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">python</span></code></p></td>
+<td><p>This is a command and has the same style as the above 2, but refers to the python program (not the language). You figure out what is being referred to from the context.</p></td>
+</tr>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">$</span> <span class="pre">command</span></code></p></td>
+<td><p>Indicates a command executed at a terminal prompt.</p></td>
+</tr>
 <tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">&lt;some</span> <span class="pre">variable&gt;</span></code></p></td>
 <td><p>You know the characters <span class="math notranslate nohighlight">\(&lt;\)</span> and <span class="math notranslate nohighlight">\(&gt;\)</span> from mathematical notation where they mean less than and greater than respectively. In this usage, we call them ‘angle brackets’ and they surround a variable that the user (you) needs to fill in.</p></td>
 </tr>
