--- a/intro.html
+++ b/intro.html
@@ -215,9 +215,13 @@
 </dl>
 <p><span class="target" id="index-0"></span>Data Science is the joint application of algorithm development and statistical modelling to extracting information from what is referred to as “big data”. Bioinformatics, also referred to as computational biology, certainly fits within this rather loose definition of data science. In essence, Bioinformatics is the union of algorithms and statistics focussed on extracting information from big biological data sets to advance knowledge of biological systems.</p>
 <p>We can ask, “What is the role of computing in science?” First, I hope you accept that science is about producing general models of how the natural world works. Good scientific models are powerful because they allow us to make predictions about what we will observe in circumstances that we may never have encountered before. Computer programs are one way in which we represent those models. They provide us with the means to evaluate, on a large scale, how well our model matches actual data. In other words, computing is at the very centre of scientific practice.</p>
-<p><em>What will I get out of this course?</em> An understanding of how computer programs work. Improvements in your logical reasoning. An understanding of how to take advantage of computing to advance your own scientific interests. An appreciation of the pitfalls of software!</p>
-<p>Back to the replication crisis. When given the same input, computer programs are, by design, intended to produce the same output. Given computing is a central part of science, its usage needs to be done with replication in mind.</p>
-<p>It is my goal that after this course your awareness on how to write code and validate its correctness makes you part of the solution to the replication crisis.</p>
+<p><em>What will I get out of this course?</em> An understanding of how computer programs work. Improvements in your logical reasoning. An understanding of how to take advantage of computing to advance your own scientific interests. An appreciation of the pitfalls of software! All of this adds up to a superpower that will accelerate your work <a class="footnote-reference brackets" href="#id8" id="id7">3</a>.</p>
+<dl class="footnote brackets">
+<dt class="label" id="id8"><span class="brackets"><a class="fn-backref" href="#id7">3</a></span></dt>
+<dd><p>Sorry, it’s bring your own cape.</p>
+</dd>
+</dl>
+<p>Back to the replication crisis. When given the same input, computer programs are, by design, intended to produce the same output. Given computing is a central part of science, it should be written and applied with replication in mind.</p>
 </div>
 
 
