--- a/contribute.html
+++ b/contribute.html
@@ -199,7 +199,7 @@
   Your browser does not support the video tag.
 </video></div>
 <div class="sidebar">
-<p class="sidebar-title">How to edit these documents and “make a pull request””</p>
+<p class="sidebar-title">How to edit these documents and “make a pull request”</p>
 <video width="50%" height="50%" controls>
   <source src="https://cloudstor.aarnet.edu.au/plus/s/6iuolwQlVWmAUpU/download" type="video/mp4">
   Your browser does not support the video tag.
