deploy: 450cb0b616c2031f4c78c51e7e33f10888aa6499

--- a/genindex.html
+++ b/genindex.html
@@ -354,6 +354,8 @@
         <li><a href="python/files.html#index-1">files</a>
 </li>
       </ul></li>
+      <li><a href="python/indexing.html#index-4">codon</a>
+</li>
       <li><a href="python/lists.html#index-0">collection objects</a>
 
       <ul>
