deploy: 829208b5dead4f3b7aaf8210777313dbe4940c01

--- a/genindex.html
+++ b/genindex.html
@@ -299,7 +299,7 @@
         <li><a href="python/numpy.html#index-9">numpy</a>
 </li>
       </ul></li>
-      <li><a href="python/misc.html#index-0">assert</a>
+      <li><a href="python/misc.html#index-3">assert</a>
 </li>
       <li><a href="python/variables.html#index-1">assignment</a>
 </li>
@@ -319,6 +319,13 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    b&#34;&#34;
+
+      <ul>
+        <li><a href="python/misc.html#index-2">str</a>
+</li>
+      </ul></li>
+      <li>
     bool
 
       <ul>
@@ -332,6 +339,13 @@
 
       <ul>
         <li><a href="python/functions.html#index-1">functions</a>
+</li>
+      </ul></li>
+      <li>
+    bytes
+
+      <ul>
+        <li><a href="python/misc.html#index-1">str string</a>
 </li>
       </ul></li>
   </ul></td>
@@ -388,9 +402,9 @@
     comprehension
 
       <ul>
-        <li><a href="python/misc.html#index-1">dict</a>
+        <li><a href="python/misc.html#index-4">dict</a>
 </li>
-        <li><a href="python/misc.html#index-1">list</a>
+        <li><a href="python/misc.html#index-4">list</a>
 </li>
       </ul></li>
       <li>
@@ -413,7 +427,7 @@
         <li><a href="python/numpy.html#index-8">numpy</a>
 </li>
       </ul></li>
-      <li><a href="python/misc.html#index-0">correctness</a>
+      <li><a href="python/misc.html#index-3">correctness</a>
 </li>
       <li>
     count
@@ -431,10 +445,19 @@
       <li><a href="intro.html#index-0">Data Science</a>
 </li>
       <li>
+    decode
+
+      <ul>
+        <li><a href="python/misc.html#index-1">str, encode</a>
+</li>
+        <li><a href="python/misc.html#index-1">string, encode</a>
+</li>
+      </ul></li>
+      <li>
     dict
 
       <ul>
-        <li><a href="python/misc.html#index-1">comprehension</a>
+        <li><a href="python/misc.html#index-4">comprehension</a>
 </li>
         <li><a href="python/types.html#index-7">types collection objects</a>
 </li>
@@ -450,6 +473,8 @@
         <li><a href="python/start.html#index-3">maths</a>
 </li>
       </ul></li>
+      <li><a href="python/writing_functions.html#index-3">docstring</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -471,14 +496,30 @@
 </li>
       </ul></li>
       <li>
+    encode
+
+      <ul>
+        <li><a href="python/misc.html#index-1">decode str</a>
+</li>
+        <li><a href="python/misc.html#index-1">decode string</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
     enumerate
 
       <ul>
         <li><a href="python/logic.html#index-6">loops</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    escaping characters
+
+      <ul>
+        <li><a href="python/misc.html#index-0">str</a>
+</li>
+      </ul></li>
       <li>
     evaluation
 
@@ -671,7 +712,7 @@
       <li><a href="python/lists.html#index-0">list</a>
 
       <ul>
-        <li><a href="python/misc.html#index-1">comprehension</a>
+        <li><a href="python/misc.html#index-4">comprehension</a>
 </li>
         <li><a href="python/types.html#index-5">types collection objects</a>
 </li>
@@ -870,6 +911,13 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    pass
+
+      <ul>
+        <li><a href="python/writing_functions.html#index-4">statement</a>
+</li>
+      </ul></li>
+      <li>
     plus
 
       <ul>
@@ -892,21 +940,37 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    r&#34;&#34;
+
+      <ul>
+        <li><a href="python/misc.html#index-0">str</a>
+</li>
+      </ul></li>
+      <li>
+    raw
+
+      <ul>
+        <li><a href="python/misc.html#index-0">str</a>
+</li>
+      </ul></li>
+      <li>
     required arguments
 
       <ul>
         <li><a href="python/writing_functions.html#index-1">function</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     return
 
       <ul>
         <li><a href="python/writing_functions.html#index-0">function</a>
 </li>
+        <li><a href="python/writing_functions.html#index-0">statement</a>
+</li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/iterators.html#index-1">reversed()</a>
 </li>
       <li>
@@ -960,26 +1024,47 @@
 </li>
       </ul></li>
       <li>
+    statement
+
+      <ul>
+        <li><a href="python/writing_functions.html#index-4">pass</a>
+</li>
+        <li><a href="python/writing_functions.html#index-0">return</a>
+</li>
+      </ul></li>
+      <li>
     stop
 
       <ul>
         <li><a href="python/indexing.html#index-2">slice</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/types.html#index-0">str</a>
 
       <ul>
+        <li><a href="python/misc.html#index-2">b&#34;&#34;</a>
+</li>
         <li><a href="python/types.html#index-10">C-style</a>
+</li>
+        <li><a href="python/misc.html#index-1">encode decode</a>
+</li>
+        <li><a href="python/misc.html#index-0">escaping characters</a>
 </li>
         <li><a href="python/types.html#index-11">f-strings</a>
 </li>
         <li><a href="python/types.html#index-11">format</a>
 </li>
+        <li><a href="python/misc.html#index-0">r&#34;&#34;</a>
+</li>
+        <li><a href="python/misc.html#index-0">raw</a>
+</li>
         <li><a href="python/types.html#index-10">string formatting</a>
 </li>
+        <li><a href="python/misc.html#index-1">string, bytes</a>
+</li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     stride
 
@@ -990,7 +1075,11 @@
       <li><a href="python/types.html#index-0">string</a>
 
       <ul>
+        <li><a href="python/misc.html#index-1">bytes str</a>
+</li>
         <li><a href="python/functions.html#index-4">concatenating</a>
+</li>
+        <li><a href="python/misc.html#index-1">encode decode</a>
 </li>
       </ul></li>
       <li>
@@ -1000,6 +1089,8 @@
         <li><a href="python/types.html#index-10">str</a>
 </li>
       </ul></li>
+      <li><a href="python/writing_functions.html#index-3">string literal</a>
+</li>
       <li>
     subtract
 
@@ -1022,7 +1113,7 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python/misc.html#index-0">testing</a>
+      <li><a href="python/misc.html#index-3">testing</a>
 </li>
       <li><a href="python/import.html#index-1">third party libraries</a>
 </li>
@@ -1091,7 +1182,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python/misc.html#index-2">unzip</a>
+      <li><a href="python/misc.html#index-5">unzip</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1151,7 +1242,7 @@
 <h2 id="Z">Z</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python/misc.html#index-2">zip</a>
+      <li><a href="python/misc.html#index-5">zip</a>
 </li>
   </ul></td>
 </tr></table>
