deploy: 0c684720f2a25e81878d051dad514ad47c3e56cd

--- a/python/indexing.html
+++ b/python/indexing.html
@@ -458,8 +458,8 @@
 <div class="cell_output docutils container">
 </div>
 </div>
-<p><strong>3.</strong> Use a slice to extract the first codon. Do the same for the last codon.</p>
-<p><strong>4.</strong> Use a slice operation to obtain the first nucleotide of each codon <a class="footnote-reference brackets" href="#id6" id="id5">3</a>, i.e. you should produce <code class="docutils literal notranslate"><span class="pre">[&quot;A&quot;,</span> <span class="pre">&quot;A&quot;,</span> <span class="pre">&quot;A&quot;]</span></code>. Do this for the second codon position (producing <code class="docutils literal notranslate"><span class="pre">[&quot;T&quot;,</span> <span class="pre">&quot;T&quot;,</span> <span class="pre">&quot;T&quot;]</span></code>) and then the third codon position.</p>
+<p><strong>3.</strong> Use a slice to extract the first codon <a class="footnote-reference brackets" href="#id6" id="id5">3</a>. Do the same for the last codon.</p>
+<p><strong>4.</strong> Use a slice operation to obtain the first nucleotide of each codon, i.e. you should produce <code class="docutils literal notranslate"><span class="pre">[&quot;A&quot;,</span> <span class="pre">&quot;A&quot;,</span> <span class="pre">&quot;A&quot;]</span></code>. Do this for the second codon position (producing <code class="docutils literal notranslate"><span class="pre">[&quot;T&quot;,</span> <span class="pre">&quot;T&quot;,</span> <span class="pre">&quot;T&quot;]</span></code>) and then the third codon position.</p>
 <dl class="footnote brackets">
 <dt class="label" id="id6"><span class="brackets"><a class="fn-backref" href="#id5">3</a></span></dt>
 <dd><p>DNA encodes amino acid sequences using 3 consecutive bases. This unit is referred to as a <span class="target" id="index-4"></span>codon.</p>
