deploy: 0f132d9d6980b0772cfca9c2d0987f4dd3045ffa

--- a/python/files.html
+++ b/python/files.html
@@ -410,7 +410,7 @@
 <p>According to the format specification, these fields are tab (<code class="docutils literal notranslate"><span class="pre">'\t'</span></code>) delimited. To generate such output we need to store the field values in a series object (such as a list). This allows us to then use the string <code class="docutils literal notranslate"><span class="pre">join()</span></code> method to produce a single string with all field elements.</p>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
-<p>Writing comma delimited files is done in the same way. Just replace <code class="docutils literal notranslate"><span class="pre">'\'.join</span></code> with <code class="docutils literal notranslate"><span class="pre">','.join</span></code>.</p>
+<p>Writing comma delimited files is done in the same way. Just replace <code class="docutils literal notranslate"><span class="pre">'\t'.join</span></code> with <code class="docutils literal notranslate"><span class="pre">','.join</span></code>.</p>
 </div>
 </div>
 </div>
