--- a/genindex.html
+++ b/genindex.html
@@ -190,6 +190,7 @@
  | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
+ | <a href="#Y"><strong>Y</strong></a>
  | <a href="#Z"><strong>Z</strong></a>
  
 </div>
@@ -693,6 +694,15 @@
 
 <h2 id="K">K</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    keyword
+
+      <ul>
+        <li><a href="python/iterators.html#index-2">yield</a>
+</li>
+      </ul></li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     keyword arguments
@@ -1234,6 +1244,19 @@
 
       <ul>
         <li><a href="python/files.html#index-3">files</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="Y">Y</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    yield
+
+      <ul>
+        <li><a href="python/iterators.html#index-2">keyword</a>
 </li>
       </ul></li>
   </ul></td>
