deploy: 2675aff989e77ff4e6892aad04db5951a315c9d2

--- a/genindex.html
+++ b/genindex.html
@@ -286,7 +286,7 @@
     arguments
 
       <ul>
-        <li><a href="python/writing_functions.html#index-1">function</a>
+        <li><a href="python/writing_functions.html#index-2">function</a>
 </li>
       </ul></li>
   </ul></td>
@@ -474,7 +474,7 @@
         <li><a href="python/start.html#index-3">maths</a>
 </li>
       </ul></li>
-      <li><a href="python/writing_functions.html#index-3">docstring</a>
+      <li><a href="python/writing_functions.html#index-4">docstring</a>
 </li>
   </ul></td>
 </tr></table>
@@ -599,13 +599,13 @@
     function
 
       <ul>
-        <li><a href="python/writing_functions.html#index-1">arguments</a>
+        <li><a href="python/writing_functions.html#index-2">arguments</a>
 </li>
-        <li><a href="python/writing_functions.html#index-2">keyword arguments</a>
+        <li><a href="python/writing_functions.html#index-3">keyword arguments</a>
 </li>
-        <li><a href="python/writing_functions.html#index-2">optional arguments</a>
+        <li><a href="python/writing_functions.html#index-3">optional arguments</a>
 </li>
-        <li><a href="python/writing_functions.html#index-1">required arguments</a>
+        <li><a href="python/writing_functions.html#index-2">required arguments</a>
 </li>
         <li><a href="python/writing_functions.html#index-0">return</a>
 </li>
@@ -616,6 +616,8 @@
 
       <ul>
         <li><a href="python/functions.html#index-1">builtin</a>
+</li>
+        <li><a href="python/writing_functions.html#index-1">void</a>
 </li>
       </ul></li>
   </ul></td>
@@ -647,6 +649,8 @@
         <li><a href="python/logic.html#index-2">conditionals</a>
 </li>
       </ul></li>
+      <li><a href="python/functions.html#index-5">immutable</a>
+</li>
       <li><a href="python/import.html#index-0">import</a>
 </li>
       <li><a href="python/logic.html#index-1">indentation</a>
@@ -660,10 +664,10 @@
         <li><a href="python/numpy.html#index-3">numpy</a>
 </li>
       </ul></li>
-      <li><a href="python/functions.html#index-2">instance</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python/functions.html#index-2">instance</a>
+</li>
       <li>
     int
 
@@ -708,7 +712,7 @@
     keyword arguments
 
       <ul>
-        <li><a href="python/writing_functions.html#index-2">function</a>
+        <li><a href="python/writing_functions.html#index-3">function</a>
 </li>
       </ul></li>
   </ul></td>
@@ -779,8 +783,6 @@
         <li><a href="python/start.html#index-1">subtract</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     matrix
 
@@ -788,6 +790,8 @@
         <li><a href="python/numpy.html#index-1">numpy</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     matrix multiply
 
@@ -820,6 +824,8 @@
         <li><a href="python/start.html#index-2">maths</a>
 </li>
       </ul></li>
+      <li><a href="python/functions.html#index-5">mutable</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -911,7 +917,7 @@
     optional arguments
 
       <ul>
-        <li><a href="python/writing_functions.html#index-2">function</a>
+        <li><a href="python/writing_functions.html#index-3">function</a>
 </li>
       </ul></li>
   </ul></td>
@@ -924,7 +930,7 @@
     pass
 
       <ul>
-        <li><a href="python/writing_functions.html#index-4">statement</a>
+        <li><a href="python/writing_functions.html#index-5">statement</a>
 </li>
       </ul></li>
       <li>
@@ -967,7 +973,7 @@
     required arguments
 
       <ul>
-        <li><a href="python/writing_functions.html#index-1">function</a>
+        <li><a href="python/writing_functions.html#index-2">function</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1037,7 +1043,7 @@
     statement
 
       <ul>
-        <li><a href="python/writing_functions.html#index-4">pass</a>
+        <li><a href="python/writing_functions.html#index-5">pass</a>
 </li>
         <li><a href="python/writing_functions.html#index-0">return</a>
 </li>
@@ -1099,7 +1105,7 @@
         <li><a href="python/types.html#index-10">str</a>
 </li>
       </ul></li>
-      <li><a href="python/writing_functions.html#index-3">string literal</a>
+      <li><a href="python/writing_functions.html#index-4">string literal</a>
 </li>
       <li>
     subtract
@@ -1207,6 +1213,15 @@
         <li><a href="python/variables.html#index-0">naming</a>
 </li>
         <li><a href="python/variables.html#index-0">syntax</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    void
+
+      <ul>
+        <li><a href="python/writing_functions.html#index-1">functions</a>
 </li>
       </ul></li>
   </ul></td>
