--- a/genindex.html
+++ b/genindex.html
@@ -732,14 +732,21 @@
 </li>
       </ul></li>
       <li>
+    literal
+
+      <ul>
+        <li><a href="python/strings.html#index-0">string</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
     logical operations
 
       <ul>
         <li><a href="python/numpy.html#index-9">numpy</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/logic.html#index-3">looping</a>
 </li>
       <li>
@@ -846,6 +853,13 @@
 
       <ul>
         <li><a href="python/indexing.html#index-3">slice</a>
+</li>
+      </ul></li>
+      <li>
+    new line
+
+      <ul>
+        <li><a href="python/strings.html#index-1">string</a>
 </li>
       </ul></li>
       <li>
@@ -1026,6 +1040,13 @@
 </li>
       </ul></li>
       <li>
+    space
+
+      <ul>
+        <li><a href="python/strings.html#index-1">string</a>
+</li>
+      </ul></li>
+      <li>
     standard deviation
 
       <ul>
@@ -1097,6 +1118,16 @@
 </li>
         <li><a href="python/misc.html#index-1">encode decode</a>
 </li>
+        <li><a href="python/strings.html#index-0">literal</a>
+</li>
+        <li><a href="python/strings.html#index-1">new line</a>
+</li>
+        <li><a href="python/strings.html#index-1">space</a>
+</li>
+        <li><a href="python/strings.html#index-1">tab</a>
+</li>
+        <li><a href="python/strings.html#index-1">white space</a>
+</li>
       </ul></li>
       <li>
     string formatting
@@ -1129,6 +1160,13 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    tab
+
+      <ul>
+        <li><a href="python/strings.html#index-1">string</a>
+</li>
+      </ul></li>
       <li><a href="python/misc.html#index-3">testing</a>
 </li>
       <li><a href="python/import.html#index-1">third party libraries</a>
@@ -1250,6 +1288,8 @@
         <li><a href="python/logic.html#index-0">&#34;\r&#34;</a>
 </li>
         <li><a href="python/logic.html#index-0">&#34;\t&#34;</a>
+</li>
+        <li><a href="python/strings.html#index-1">string</a>
 </li>
       </ul></li>
   </ul></td>
