deploy: 39201c0851b3c2771fb9cd4f7ee056e8f290c3ac

--- a/genindex.html
+++ b/genindex.html
@@ -265,7 +265,7 @@
     add
 
       <ul>
-        <li><a href="python/start.html#index-0">maths</a>
+        <li><a href="python/start.html#index-2">maths</a>
 </li>
       </ul></li>
       <li>
@@ -300,7 +300,7 @@
         <li><a href="python/numpy.html#index-9">numpy</a>
 </li>
       </ul></li>
-      <li><a href="python/misc.html#index-3">assert</a>
+      <li><a href="python/how_to_write_a_program.html#index-0">assert</a>, <a href="python/misc.html#index-3">[1]</a>
 </li>
       <li><a href="python/variables.html#index-1">assignment</a>
 </li>
@@ -366,7 +366,7 @@
     close
 
       <ul>
-        <li><a href="python/files.html#index-1">files</a>
+        <li><a href="python/files.html#index-3">files</a>
 </li>
       </ul></li>
       <li><a href="python/indexing.html#index-4">codon</a>
@@ -446,6 +446,13 @@
       <li><a href="intro.html#index-0">Data Science</a>
 </li>
       <li>
+    Debugging a simple Python script using an IDE
+
+      <ul>
+        <li><a href="python/interpreting_errors.html#index-0">screencasts</a>
+</li>
+      </ul></li>
+      <li>
     decode
 
       <ul>
@@ -454,6 +461,8 @@
         <li><a href="python/misc.html#index-1">string, encode</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     dict
 
@@ -463,15 +472,13 @@
         <li><a href="python/types.html#index-7">types collection objects</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/dir_help.html#index-0">dir()</a>
 </li>
       <li>
     divide
 
       <ul>
-        <li><a href="python/start.html#index-3">maths</a>
+        <li><a href="python/start.html#index-5">maths</a>
 </li>
       </ul></li>
       <li><a href="python/writing_functions.html#index-4">docstring</a>
@@ -482,6 +489,13 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    Editing the documents and &#34;make a pull request&#34;
+
+      <ul>
+        <li><a href="contribute.html#index-1">screencasts</a>
+</li>
+      </ul></li>
       <li>
     elif
 
@@ -505,8 +519,6 @@
         <li><a href="python/misc.html#index-1">decode string</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     enumerate
 
@@ -514,6 +526,8 @@
         <li><a href="python/logic.html#index-6">loops</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     escaping characters
 
@@ -529,10 +543,31 @@
 </li>
       </ul></li>
       <li>
+    Executing Python from a text file
+
+      <ul>
+        <li><a href="python/start.html#index-1">screencasts</a>
+</li>
+      </ul></li>
+      <li>
+    Executing Python using a REPL
+
+      <ul>
+        <li><a href="python/start.html#index-0">screencasts</a>
+</li>
+      </ul></li>
+      <li>
+    Exploring namespaces using the debugger
+
+      <ul>
+        <li><a href="python/namespace.html#index-1">screencasts</a>
+</li>
+      </ul></li>
+      <li>
     exponents
 
       <ul>
-        <li><a href="python/start.html#index-4">maths</a>
+        <li><a href="python/start.html#index-6">maths</a>
 </li>
       </ul></li>
   </ul></td>
@@ -552,24 +587,24 @@
     file path
 
       <ul>
-        <li><a href="python/files.html#index-0">files</a>
+        <li><a href="python/files.html#index-2">files</a>
 </li>
       </ul></li>
       <li>
     files
 
       <ul>
-        <li><a href="python/files.html#index-1">close</a>
+        <li><a href="python/files.html#index-3">close</a>
 </li>
-        <li><a href="python/files.html#index-0">file path</a>
+        <li><a href="python/files.html#index-2">file path</a>
 </li>
-        <li><a href="python/files.html#index-2">iterate contents</a>
+        <li><a href="python/files.html#index-4">iterate contents</a>
 </li>
-        <li><a href="python/files.html#index-0">open mode</a>
+        <li><a href="python/files.html#index-2">open mode</a>
 </li>
-        <li><a href="python/files.html#index-0">open()</a>
+        <li><a href="python/files.html#index-2">open()</a>
 </li>
-        <li><a href="python/files.html#index-3">writing</a>
+        <li><a href="python/files.html#index-5">writing</a>
 </li>
       </ul></li>
       <li>
@@ -637,6 +672,15 @@
       <li><a href="python/dir_help.html#index-1">help()</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    How to ask for help related to these notes
+
+      <ul>
+        <li><a href="contribute.html#index-0">screencasts</a>
+</li>
+      </ul></li>
+  </ul></td>
 </tr></table>
 
 <h2 id="I">I</h2>
@@ -679,7 +723,7 @@
     integer divide
 
       <ul>
-        <li><a href="python/start.html#index-3">maths</a>
+        <li><a href="python/start.html#index-5">maths</a>
 </li>
       </ul></li>
       <li><a href="python/operators.html#index-0">is</a>
@@ -688,7 +732,7 @@
     iterate contents
 
       <ul>
-        <li><a href="python/files.html#index-2">files</a>
+        <li><a href="python/files.html#index-4">files</a>
 </li>
       </ul></li>
       <li><a href="python/iterators.html#index-0">iterator</a>
@@ -769,25 +813,25 @@
       <li><a href="python/numpy.html#index-0">maths</a>
 
       <ul>
-        <li><a href="python/start.html#index-0">add</a>
+        <li><a href="python/start.html#index-2">add</a>
 </li>
-        <li><a href="python/start.html#index-3">divide</a>
+        <li><a href="python/start.html#index-5">divide</a>
 </li>
-        <li><a href="python/start.html#index-4">exponents</a>
+        <li><a href="python/start.html#index-6">exponents</a>
 </li>
-        <li><a href="python/start.html#index-3">integer divide</a>
+        <li><a href="python/start.html#index-5">integer divide</a>
 </li>
-        <li><a href="python/start.html#index-1">minus</a>
+        <li><a href="python/start.html#index-3">minus</a>
 </li>
-        <li><a href="python/start.html#index-2">multiply</a>
+        <li><a href="python/start.html#index-4">multiply</a>
 </li>
-        <li><a href="python/start.html#index-0">plus</a>
+        <li><a href="python/start.html#index-2">plus</a>
 </li>
-        <li><a href="python/start.html#index-4">powers</a>
+        <li><a href="python/start.html#index-6">powers</a>
 </li>
-        <li><a href="python/start.html#index-5">roots</a>
+        <li><a href="python/start.html#index-7">roots</a>
 </li>
-        <li><a href="python/start.html#index-1">subtract</a>
+        <li><a href="python/start.html#index-3">subtract</a>
 </li>
       </ul></li>
       <li>
@@ -819,7 +863,7 @@
     minus
 
       <ul>
-        <li><a href="python/start.html#index-1">maths</a>
+        <li><a href="python/start.html#index-3">maths</a>
 </li>
       </ul></li>
       <li><a href="python/import.html#index-0">modules</a>
@@ -828,7 +872,7 @@
     multiply
 
       <ul>
-        <li><a href="python/start.html#index-2">maths</a>
+        <li><a href="python/start.html#index-4">maths</a>
 </li>
       </ul></li>
       <li><a href="python/functions.html#index-5">mutable</a>
@@ -913,14 +957,14 @@
     open mode
 
       <ul>
-        <li><a href="python/files.html#index-0">files</a>
+        <li><a href="python/files.html#index-2">files</a>
 </li>
       </ul></li>
       <li>
     open()
 
       <ul>
-        <li><a href="python/files.html#index-0">files</a>
+        <li><a href="python/files.html#index-2">files</a>
 </li>
       </ul></li>
   </ul></td>
@@ -948,19 +992,26 @@
 </li>
       </ul></li>
       <li>
-    plus
+    Paths to files and folders
 
       <ul>
-        <li><a href="python/start.html#index-0">maths</a>
+        <li><a href="python/files.html#index-0">screencasts</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    plus
+
+      <ul>
+        <li><a href="python/start.html#index-2">maths</a>
+</li>
+      </ul></li>
+      <li>
     powers
 
       <ul>
-        <li><a href="python/start.html#index-4">maths</a>
+        <li><a href="python/start.html#index-6">maths</a>
 </li>
       </ul></li>
   </ul></td>
@@ -981,6 +1032,13 @@
 
       <ul>
         <li><a href="python/misc.html#index-0">str</a>
+</li>
+      </ul></li>
+      <li>
+    Reading a text file using an IDE
+
+      <ul>
+        <li><a href="python/files.html#index-1">screencasts</a>
 </li>
       </ul></li>
       <li>
@@ -1007,7 +1065,7 @@
     roots
 
       <ul>
-        <li><a href="python/start.html#index-5">maths</a>
+        <li><a href="python/start.html#index-7">maths</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1020,6 +1078,27 @@
 </li>
       <li><a href="python/namespace.html#index-0">scope</a>
 </li>
+      <li>
+    screencasts
+
+      <ul>
+        <li><a href="python/interpreting_errors.html#index-0">Debugging a simple Python script using an IDE</a>
+</li>
+        <li><a href="contribute.html#index-1">Editing the documents and &#34;make a pull request&#34;</a>
+</li>
+        <li><a href="python/start.html#index-1">Executing Python from a text file</a>
+</li>
+        <li><a href="python/start.html#index-0">Executing Python using a REPL</a>
+</li>
+        <li><a href="python/namespace.html#index-1">Exploring namespaces using the debugger</a>
+</li>
+        <li><a href="contribute.html#index-0">How to ask for help related to these notes</a>
+</li>
+        <li><a href="python/files.html#index-0">Paths to files and folders</a>
+</li>
+        <li><a href="python/files.html#index-1">Reading a text file using an IDE</a>
+</li>
+      </ul></li>
       <li><a href="python/indexing.html#index-1">slice</a>
 
       <ul>
@@ -1076,6 +1155,8 @@
         <li><a href="python/indexing.html#index-2">slice</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/types.html#index-0">str</a>
 
       <ul>
@@ -1100,8 +1181,6 @@
         <li><a href="python/misc.html#index-1">string, bytes</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     stride
 
@@ -1142,7 +1221,7 @@
     subtract
 
       <ul>
-        <li><a href="python/start.html#index-1">maths</a>
+        <li><a href="python/start.html#index-3">maths</a>
 </li>
       </ul></li>
       <li>
@@ -1185,8 +1264,7 @@
         <li><a href="python/types.html#index-6">types collection objects</a>
 </li>
       </ul></li>
-      <li>
-    type casting
+      <li><a href="python/how_to_write_a_program.html#index-0">type casting</a>
 
       <ul>
         <li><a href="python/types.html#index-9">types</a>
@@ -1298,7 +1376,7 @@
     writing
 
       <ul>
-        <li><a href="python/files.html#index-3">files</a>
+        <li><a href="python/files.html#index-5">files</a>
 </li>
       </ul></li>
   </ul></td>
